syntax = "proto3";

package malonaz.ai.v1;

import "buf/validate/validate.proto";
import "google/api/resource.proto";
import "google/protobuf/descriptor.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";
import "malonaz/audio/v1/audio.proto";

option go_package = "github.com/malonaz/core/genproto/ai/v1";
option (google.api.resource_definition) = {
  type: "ai.malonaz.com/Provider"
  pattern: "providers/{provider}"
  singular: "provider"
  plural: "providers"
};

// Holds a provider config.
message ProviderModelConfig {
  // The id of the provider.
  string provider_id = 1;
  // The models of this provider.
  repeated Model models = 2;
}

// Contains configuration for a  model.
message Model {
  option (google.api.resource) = {
    type: "ai.malonaz.com/Model"
    pattern: "providers/{provider}/models/{model}"
    singular: "model"
    plural: "models"
  };

  // Required. The resource name of the `Model`.
  // Format: `providers/{provider}/models/{model}` with a `{model}` naming convention of:
  //
  // * "{base_model_id}-{version}"
  //
  // Examples:
  //
  // * `providers/google/models/gemini-1.5-flash-001`
  string name = 1 [
    (buf.validate.field).required = true,
    (buf.validate.field).string.min_len = 1,
    (buf.validate.field).string.max_len = 128
  ];
  // The id used for this model by the provider.
  // This is introduced to absorb bad provider model naming standards.
  string provider_model_id = 2 [
    (buf.validate.field).required = true,
    (buf.validate.field).string.min_len = 1,
    (buf.validate.field).string.max_len = 128
  ];
  // A short description for this model.
  string description = 3 [(buf.validate.field).string.max_len = 1024];
  // The time at which this model was deprecated.
  google.protobuf.Timestamp deprecate_time = 4;
  // Configuration for STT model.
  SttModelConfig stt = 5;
  // Configuration for TTT model.
  TttModelConfig ttt = 6;
  // Configuration for TTS model.
  TtsModelConfig tts = 7;
  // Provider-specific settings and metadata.
  // This allows flexibility for provider-specific features without
  // modifying the core schema.
  google.protobuf.Struct provider_settings = 8;
}

// Configuration for a speech to text model.
message SttModelConfig {}

// Configuration for a ttt model.
message TttModelConfig {
  // True if the model supports reasoning.
  bool reasoning = 1;
  // True if the model support tool calling.
  bool tool_call = 2;
  // The maximum number of tokens in the model's context window.
  int32 context_token_limit = 3 [(buf.validate.field).int32.gte = 1];
  // The maximum number of tokens the model can generate in a single response.
  int32 output_token_limit = 4 [(buf.validate.field).int32.gte = 1];
  // Pricing for this model.
  TttModelPricing pricing = 5;
}

// Pricing configuration for a ttt model.
message TttModelPricing {
  // Price per million input tokens in dollars.
  double input_token_price_per_million = 1;
  // Price per million output tokens in dollars.
  double output_token_price_per_million = 2;
  // Price per million output reasoning tokens in dollars.
  double output_reasoning_token_price_per_million = 3;
  // Price per million cache read tokens in dollars.
  double input_token_cache_read_price_per_million = 4;
  // Price per million cache write tokens in dollars.
  double input_token_cache_write_price_per_million = 5;
  // Price per million input image tokens in dollars.
  double input_image_token_price_per_million = 6;
  // Price per million output image tokens in dollars.
  double output_image_token_price_per_million = 7;
  // Price per million input image cache read tokens in dollars.
  double input_image_token_cache_read_price_per_million = 8;
  // Price per million input image cache write tokens in dollars.
  double input_image_token_cache_write_price_per_million = 9;
}

// Configuration for a tts model.
message TtsModelConfig {
  // Default audio format of the output of this model.
  audio.v1.Format audio_format = 1 [(buf.validate.field).required = true];
  // Supported sample rates.
  repeated int32 supported_sample_rates = 2 [
    (buf.validate.field).repeated.min_items = 1,
    (buf.validate.field).repeated.items.int32.gte = 8000
  ];
}
